--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,7 @@ body {
 }
 
 .cells {
+    position: relative;
     width: 12.5%;
     height: 12.5%;
 }
@@ -29,4 +30,17 @@ body {
     width: 100%;
     height: 100%;
     position: relative;
+}
+
+.dot {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 25%;
+    height: 25%;
+    z-index: 1;
+    border-radius: 50%;
+
+    background-color: red;
 }
